--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ body {
         justify-content: space-between;
         margin-left: 4.5rem;
         margin-right: 4.5rem;
+        margin-bottom: 1rem;
         background-color: white;
         height: 107px;
         border-radius: 2rem;
@@ -92,19 +93,22 @@ body {
         padding-bottom: 1.5rem;
         padding-right: 3rem;
         padding-left: 3rem;
-        
+        align-items: center;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
 
     h3 {
         text-align: left;
         font-weight: 600;
         color: #36476D;
+        font-size: 30px;
     }
 
     h4 {
         text-align: left;
         font-weight: 400;
-        color: #36476D;
+        color: #828EA6;
+        font-size: 28px;
     }
 
 .delete-button {
